--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pinia": "^2.3.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "socket.io-client": "^4.8.1",
+    "terser": "^5.44.0",
     "vue": "^3.5.13",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.0"
